# wimu-miditokvisualizer

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  logging.conf  main.py  pyproject.toml
backend/api/: api.py
backend/core/: constants.py  main.py
backend/core/api/: api.py  logging_middleware.py  model.py
backend/core/service/: midi_processing.py  process_file.py  serializer.py  tokenizer_factory.py
backend/core/service/tokenizers/: cpword_tokenizer.py  midilike_tokenizer.py  octuple_tokenizer.py  remi_tokenizer.py  structured_tokenizer.py  tokenizer_factory.py  tsd_tokenizer.py
backend/tests/: test_api.py  test_info_retrieval.py  test_tokenizer_factory.py
docs/: GR5_design_proposal.md  WIMU-GR3-Dokumentacja.md  notes_pl.md
example_files/: test.mid  test2.mid
frontend/: .env.production  .gitignore  Dockerfile  package.json  tsconfig.json
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/components/: DataDisplay.tsx  ErrorBoundary.tsx  FilePlayback.tsx  FileUpload.tsx  MidiUtils.tsx  MusicInfoDisplay.tsx  PianoRollBlock.tsx  PianoRollDisplay.tsx  RangeSlider.tsx  SingleValueSlider.tsx  Spinner.tsx  TokenBlock.tsx  TokenInfo.tsx
frontend/src/interfaces/: ApiResponse.tsx
frontend/src/types/: react-piano-roll.d.ts
