[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
miditok = "^2.1.7"
python-multipart = "^0.0.6"
muspy = "^0.5.0"
mido = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.13"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
fmt = false

[tool.mypy]
python_version = "3.10"
mypy_path = "app/"
disallow_incomplete_defs = true
warn_redundant_casts = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
namespace_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "spade.*",
]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = [
    ".venv",
    "data",
]
ignore = [
    "E402",
    "E501",
]
select = [
    "E",
    "F",
    "W",
]

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true
multi_line_output = 3
